Prevent word wrapping in player control bar

--- a/xrtube/style/main.css
+++ b/xrtube/style/main.css
@@ -334,6 +334,7 @@ media-controller {
 
     & media-control-bar {
         backdrop-filter: none;
+        word-wrap: normal;
     }
 
     &:not([mediahasplayed]), &[mediaended] {
